--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "python_plus_plus"
-version = "0.0.1"
+version = "0.0.2"
 edition = "2021"
 authors = ["konstin <konstin@mailbox.org>"]
 repository = "https://github.com/konstin/python_plus_plus"
@@ -15,6 +15,8 @@ path-guid = "EDE706B3-DB3B-48BC-B3EB-FEB3179360EF"
 anyhow = "1.0.75"
 dirs = "5.0.1"
 fs-err = "2.9.0"
+git2 = "0.18.1"
+libc = "0.2.150"
 libloading = "0.8.1"
 log = "0.4.20"
 monotrail-utils = { git = "https://github.com/konstin/poc-monotrail" }
@@ -24,6 +26,10 @@ tempfile = "3.8.1"
 thiserror = "1.0.50"
 tracing = "0.1.40"
 widestring = "1.0.2"
+
+[features]
+default = ["vendored"]
+vendored = ["git2/vendored-openssl", "git2/vendored-libgit2"]
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
