--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "python_plus_plus"
-version = "0.0.2"
+version = "0.0.3"
 edition = "2021"
 authors = ["konstin <konstin@mailbox.org>"]
 repository = "https://github.com/konstin/python_plus_plus"
+readme = "Readme.md"
 
 [package.metadata.wix]
 upgrade-guid = "8D1866DC-8ECF-489A-A615-FA13CE08D620"
